--- a/ckanext/dashboard_charts/templates/snippets/example_theme_most_popular_groups.html
+++ b/ckanext/dashboard_charts/templates/snippets/example_theme_most_popular_groups.html
@@ -36,10 +36,10 @@
     Plotly.newPlot("myPlot", dataOfBar);
 
   }   
-  xhttp.open("POST", "http://localhost:5000/api/3/action/datastore_search");
+  xhttp.open("POST", "http://hecht.informatik.tu-chemnitz.de/api/3/action/datastore_search");
   xhttp.setRequestHeader( 'Content-Type', 'application/x-www-form-urlencoded');
 
-  xhttp.send(JSON.stringify({"resource_id":"75df7ace-e182-489a-a771-424a5c02d823","q":"","filters":{},"limit":35000,"offset":0,"total_estimation_threshold":1000}));
+  xhttp.send(JSON.stringify({"resource_id":"f423c29e-4755-407e-998b-b26489a43818","q":"","filters":{},"limit":35000,"offset":0,"total_estimation_threshold":1000}));
 
  // Display using Plotly
  Plotly.newPlot("myPlot", dataOfBar);
