--- a/ckanext/dashboard_charts/templates/home/layout1.html
+++ b/ckanext/dashboard_charts/templates/home/layout1.html
@@ -1,9 +1,8 @@
 {% ckan_extends %} 
 {% block promoted %}
-{% snippet 'snippets/example_theme_most_popular_groups.html',
-  groups=h.example_theme_most_popular_groups()  %}
+{% snippet 'snippets/first_widget.html'  %}
 {% endblock %} 
 
 {% block search %}
- {% snippet 'snippets/demo_professorlist.html'  %}
+ {% snippet 'snippets/second_widget.html'  %}
 {% endblock %}
