--- a/ckanext/dashboard_charts/templates/home/about.html
+++ b/ckanext/dashboard_charts/templates/home/about.html
@@ -458,14 +458,14 @@ mark{
     </tbody></table></section>`;
       
           document.getElementById("daino").innerHTML = tab;
-	  document.getElementById("publist-box").style.display = 'none'; 
+	  document.getElementById("publist-box").style.display = 'block'; 
           document.getElementById("publist").innerHTML = tab2;
        
         } 
                  
         http.open("POST", "http://"+String(window.location.host)+"/api/3/action/datastore_search");
         http.setRequestHeader( 'Content-Type', 'application/x-www-form-urlencoded');
-        http.send(JSON.stringify({"resource_id":"f423c29e-4755-407e-998b-b26489a43818","q": query,"filters":{},"limit":35000,"offset":0,"total_estimation_threshold":1000})); 
+        http.send(JSON.stringify({"resource_id":"18208842-1c49-4e26-a37a-7f6217137d5a","q": query,"filters":{},"limit":35000,"offset":0,"total_estimation_threshold":1000})); 
        
         }
         else{
@@ -556,7 +556,7 @@ mark{
     }
         http.open("POST", "http://"+String(window.location.host)+"/api/3/action/datastore_search");
         http.setRequestHeader( 'Content-Type', 'application/x-www-form-urlencoded');
-        http.send(JSON.stringify({"resource_id":"f423c29e-4755-407e-998b-b26489a43818","q": '',"filters":{},"limit":35000,"offset":0,"total_estimation_threshold":1000})); 
+        http.send(JSON.stringify({"resource_id":"18208842-1c49-4e26-a37a-7f6217137d5a","q": '',"filters":{},"limit":35000,"offset":0,"total_estimation_threshold":1000})); 
     	
        }
 </script>
