--- a/ckanext/dashboard_charts/templates/header.html
+++ b/ckanext/dashboard_charts/templates/header.html
@@ -95,7 +95,7 @@
         </ul>
       </nav>
       {% endblock %} {% block header_site_search %}
-      <form class="section site-search simple-input" action="group" method="get">
+      <form class="section site-search simple-input" action="dataset" method="get">
         <div class="field">
           <label for="field-sitewide-search">{% block header_site_search_label %}{{ _('Search Datasets') }}{% endblock %}</label>
           <input id="field-sitewide-search" type="text" class="form-control" name="q" placeholder="{{ _('Search') }}" aria-label="{{ _('Search datasets') }}"/>
